--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -7,29 +7,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cangli.tech.intersect.MainActivity">
+    tools:context="com.cangli.tech.intersect.activity.CharacterActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/mainIntro"
-        android:id="@+id/textView" />
+        android:text="@string/app_name"
+        android:id="@+id/tv_Intro" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btn_Character"
-        android:id="@+id/btnCharacter"
-        android:layout_alignParentBottom="true"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_below="@+id/tv_Intro"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="74dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_Quest"
-        android:id="@+id/btnQuest"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+
 </RelativeLayout>
